Updated docker-compose.yml file again

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,9 @@ services:
     - "80:80"
   volumes:
     - .:/var/www/html
-
-postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: ${USERNAME}    # From your environment variable
-      POSTGRES_PASSWORD: ${PASSWORD}  # From your environment variable
-      POSTGRES_DB: ${DBNAME}         # From your environment variable
-    ports:
-      - "5432:5432"  # PostgreSQL runs on port 5432 for database traffic
-    volumes:
-      - postgres_data:/var/lib/postgresql/data  # Optional: Persistent data storage
-
-volumes:
-  postgres_data:
+environment:
+      - DBNAME=${DBNAME}  # These will come from Render's environment variables
+      - HOST=${HOST}
+      - USERNAME=${USERNAME}
+      - PASSWORD=${PASSWORD}
+      - PORT=${PORT}  # Port 5432 will be provided by Render
