--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,24 @@ version: '3'
 services:
   php-apache:
     build:
-    context:
-    dockerfile: Dockerfile
-  ports:
-    - "80:80"
-  volumes:
-    - .:/var/www/html
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"  # This is for the web server (HTTP port)
+    volumes:
+      - .:/var/www/html
+    environment:
+      - DBNAME=${DBNAME}
+      - HOST=${HOST}
+      - USERNAME=${USERNAME}
+      - PASSWORD=${PASSWORD}
+      - PORT=${PORT}  # Ensure you're passing 5432 for PostgreSQL
+
+  postgres:
+    image: postgres:latest  # Use a PostgreSQL image if you're containerizing PostgreSQL
+    environment:
+      POSTGRES_USER: ${USERNAME}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${DBNAME}
+    ports:
+      - "5432:5432"  # Exposing PostgreSQL on port 5432 externally
