--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       context: . 
       dockerfile: Dockerfile
     ports:
-      - "80:80"  # Web server port
+      - "80:80"
     volumes:
       - .:/var/www/html
-    
+    env_file:
+      - .env  # Point to your .env file for environment variables
